--- a/log.html
+++ b/log.html
@@ -19,7 +19,7 @@
             <li class="nav-item"><a href="adopt.html" class="nav-link">Adopt</a></li>
             <li class="nav-item"><a href="hire.html" class="nav-link">Services</a></li>
             <li class="nav-item"><a href="log.html" class="nav-link">Login</a></li>
-            <li class="nav-item"><a href="apply.html" class="nav-link">Hire</a></li>
+            <li class="nav-item"><a href="apply.html" class="nav-link">Apply</a></li>
         </ul>
     </div>
 </nav>
